[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/Objetos/boton/botonInicial.png" type="Texture" id=1]
[ext_resource path="res://Assets/Objetos/boton/botonFinal.png" type="Texture" id=2]
[ext_resource path="res://Escenas/Scripts/LogicaBotonPuente.gd" type="Script" id=3]
[ext_resource path="res://Escenas/HitBox.tscn" type="PackedScene" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6, 6 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 5, 5 )

[node name="BotonPuente" type="StaticBody2D"]
scale = Vector2( 0.6, 0.6 )
script = ExtResource( 3 )

[node name="BotonInicial" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="BotonFinal" type="Sprite" parent="."]
visible = false
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -2 )
shape = SubResource( 1 )

[node name="HitBox" parent="." instance=ExtResource( 4 )]

[node name="CollisionShape2D" parent="HitBox" index="0"]
position = Vector2( 0, -1.66667 )
shape = SubResource( 2 )

[connection signal="area_entered" from="HitBox" to="." method="_on_HitBox_area_entered"]

[editable path="HitBox"]
